# Qo

./: .gitignore  QO.bat  README.md  go.mod  index.html  main.go
backend/: README.md  pyproject.toml
backend/app/: engine.py  main.py  quantum.py  schemas.py
frontend/: index.html  package.json
frontend/src/: main.js  styles.css
