[project]
name = "qo-backend"
version = "0.1.0"
description = "Qo - Quantum Go backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "qiskit>=1.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[dependency-groups]
dev = [
  "ruff>=0.5.0"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
